# engrave

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  TESTPLAN.md  engrave.toml  engrave.toml.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-project-scaffolding-inference-router/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-rag-corpus-retrieval/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md  deferred-items.md
.planning/phases/03-midi-to-lilypond-generation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-rendering-output-packaging/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-audio-input-pipeline/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-06-PLAN.md  05-06-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/05.1-promote-advn-01-into-v1-scope-for-dorico/: 05.1-01-PLAN.md  05.1-01-SUMMARY.md  05.1-02-PLAN.md  05.1-02-SUMMARY.md  05.1-03-PLAN.md  05.1-03-SUMMARY.md  05.1-04-PLAN.md  05.1-04-SUMMARY.md  05.1-CONTEXT.md  05.1-RESEARCH.md  05.1-VERIFICATION.md
.planning/phases/06-audio-understanding-hints/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-convergent-sight-reading-ensemble-intelligence/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/07.1-minimal-ui-for-uat-needs/: .continue-here.md  07.1-01-PLAN.md  07.1-01-SUMMARY.md  07.1-02-PLAN.md  07.1-02-SUMMARY.md  (+4 more)
.planning/quick/: end-to-end-real-inference-validation.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
_work/: music-definitions.ly  part-alto-sax-1.ly  part-alto-sax-2.ly  part-baritone-sax.ly  part-bass-trombone.ly  part-bass.ly  part-drums.ly  part-guitar.ly  part-piano.ly  part-tenor-sax-1.ly  part-tenor-sax-2.ly  part-trombone-1.ly  part-trombone-2.ly  part-trombone-3.ly  part-trumpet-1.ly  part-trumpet-2.ly  part-trumpet-3.ly  part-trumpet-4.ly  score.ly
desktop/: .gitignore  package-lock.json  package.json
desktop/src/: app.js  index.html  style.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: cli_resolver.rs  keychain.rs  lib.rs  main.rs  midi.rs  oauth.rs  pipeline.rs
docs/: CLAUDE_AGENT_SDK_OAUTH_RESEARCH.md  DATASETS.md  MACOS_APP_RESEARCH.md  SCORING_GUIDE.md  WINDOWS_INSTALLER_RESEARCH.md
scripts/: bump-version.sh
src/engrave/: __init__.py  cli.py
tests/: conftest.py
tests/fixtures/: broken.ly  generate_midi_fixtures.py  no_metadata.mid  sample_concert_pitch.ly  simple_type0.mid  simple_type1.mid  valid.ly
tests/integration/: __init__.py  test_audio_generation.py  test_audio_pipeline.py  test_compile_fix_loop.py  test_generation_fanout.py  test_generation_pipeline.py  test_midi_generation_steps.py  test_musicxml_degradation.py  test_musicxml_export.py  test_musicxml_roundtrip.py  test_mutopia_ingest.py  test_packaging.py  test_pdmx_ingest.py  test_retrieval.py  test_section_generation.py  test_section_group_generation.py  test_web_app.py  test_youtube_extract.py
tests/unit/: test_agent_sdk.py  test_articulation.py  test_audio_description.py  test_audio_templates.py  test_audit.py  test_beaming.py  test_benchmark_evaluator.py  test_benchmark_harness.py  test_benchmark_renderer.py  test_boundaries.py  test_chunker.py  test_claude_pipe.py  test_coherence.py  test_compiler.py  test_concert_pitch.py  test_config.py  test_describer.py  test_description.py  test_dynamic_restatement.py  test_ensemble.py  test_failure_log.py  test_fixer.py  test_hint_loader.py  test_measure_fix.py  test_metadata.py  test_midi_analyzer.py  test_midi_injection.py  test_midi_loader.py  test_midi_sections.py  test_midi_tokenizer.py  test_musicxml_builder.py  test_mutopia_header.py  test_normalizer.py  test_notation_models.py  test_packager.py  test_parser.py  test_part_generator.py  test_pitch_map.py  test_prompt_budget.py  test_prompts_json.py  (+14 more)
(+99 files in other folders)
