[project]
name = "engrave"
version = "0.1.0"
description = "AI-powered music engraving pipeline"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.52.0",
    "litellm",
    "pydantic-settings",
    "typer",
    "rich",
    "chromadb>=1.5.1",
    "sentence-transformers>=5.2.3",
    "python-ly>=0.9.9",
    "mido>=1.3.3",
    "pretty-midi>=0.2.11",
    "python-slugify>=8.0.4",
    "pydub>=0.25.1",
    "audio-separator>=0.41.1",
    "yt-dlp>=2024.0.0",
    "midi2audio>=0.1.1",
    "mir-eval>=0.8.2",
    "music21>=9.9.1",
    "xmlschema>=4.3.1",
    "fastapi>=0.133.0",
    "uvicorn>=0.41.0",
    "python-multipart>=0.0.22",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
mlx = ["vllm-mlx"]

[project.scripts]
engrave = "engrave.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engrave"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-bdd",
    "pytest-cov",
    "pytest-asyncio",
    "pre-commit",
    "pytest-timeout>=2.4.0",
    "httpx>=0.28.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line-length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["engrave"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["engrave"]

[tool.coverage.report]
omit = ["src/engrave/cli.py"]
