[package]
name = "engrave-desktop"
version = "0.1.0"
edition = "2021"
description = "Engrave desktop app — AI-powered music engraving"

[lib]
name = "engrave_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midly = "0.5"
tokio = { version = "1", features = ["process", "io-util"] }
base64 = "0.22"
tauri-plugin-updater = "2"

[features]
devtools = ["tauri/devtools"]
